--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@ import ModelY from "../components/ModelY.astro"
 import HeroSection from "../components/HeroSection.astro"
 import LandingHeader from "../components/LandingHeader.astro";
 import Layout from "../layouts/Layout.astro";
+import Section from "../components/Section.astro";
 ---
 
 <Layout title="Tesla - El coche de tus suenios (y de Elon Musk)">
@@ -12,6 +13,7 @@ import Layout from "../layouts/Layout.astro";
 
 		<div class="snap-center">
 			<HeroSection/>
+			
 		</div>
 		<div class="snap-center">
 			<ModelY/>
