--- a/src/components/LandingHeader.astro
+++ b/src/components/LandingHeader.astro
@@ -1,7 +1,9 @@
 ---
-import Logo from "./logo.astro";
+import Logo from "./Logo.astro"
 
 ---
+
+
 
 <header class="py-3 px-10 flex items-center fixed top-0 w-full justify-between z-40 text-white" 
     id="landing-header"
@@ -39,10 +41,7 @@ import Logo from "./logo.astro";
     <div id="menu-backdrop"
      class="absolute bg-black/5 backdrop-blur-lg rounded translate-x-[var(--left)] translate-y-[var(--top)]
      left-0 top-0
-     w-[var(--width)] h-[var(--height)] transition-all duration-500 ease-in-out opacity-0 -z-10
-     
-     
-     ">
+     w-[var(--width)] h-[var(--height)] transition-all duration-500 ease-in-out opacity-0 -z-10">
 
     </div>
 </header>
